# cube_terrain

./: .gitignore  CMakeLists.txt  README.md
include/core/: cubo.hpp  graphics_core.hpp
include/glad/: glad.h
include/render/: mesh.hpp  shader.hpp
include/utils/: shader_loader.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: basic.frag  basic.vert
src/: glad.c  main.cpp
src/core/: cubo.cpp  graphics_core.cpp
src/render/: mesh.cpp  shader.cpp
src/utils/: shader_loader.cpp
